--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "prefix": "/",
   "channel_id": "805809242111737926",
-  "token": "process.env.BOT_TOKEN"
+  "token": "NjcyOTQxOTc2Mzk5NzczNzM2.XjS0DQ.CJjL2gcYKD1tGJ0nycxrYpvO_PQ"
 }
