--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
   "prefix": "/",
   "channel_id": "805809242111737926",
-  "token": "NjcyOTQxOTc2Mzk5NzczNzM2.XjS0DQ.CJjL2gcYKD1tGJ0nycxrYpvO_PQ"
+  "startToken": "NjcyOTQxOTc2Mzk5NzczNzM2",
+  "midToken": ".XjS0DQ.",
+  "endToken": "f4jXhl6pc3rSTXJhHXxv7OQKiUg"
 }
