--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Cirard",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "discord.js": "^12.3.1"
   },
   "scripts": {
