--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "author": "Cirard",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.5.3",
     "axios": "^0.21.1",
-    "discord.js": "^12.3.1"
+    "discord.js": "^12.5.3",
+    "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "ytdl-core": "^4.8.3"
   },
   "scripts": {
     "start": "node index.js"
