--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "axios": "^0.21.1",
     "discord.js": "^12.5.3",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
-    "ytdl-core": "^4.8.3"
+    "ytdl-core": "^4.9.0"
   },
   "scripts": {
     "start": "node index.js"
