--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
+    "usetube": "^2.1.1",
     "ytdl-core": "^4.9.0"
   },
   "scripts": {
